<?xml version="1.0"?>
<package format="2">
  <name>uwb_fusion</name>
  <version>1.0.0</version>
  <description>Stereo UWB tracking using GTSAM Factor Graphs</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>
  </package>